--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: purple;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -68,6 +72,8 @@ ul {
   margin-bottom: 0.5rem;
   padding: 0.4rem;
   font-size: 1.3rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .completed {
@@ -80,4 +86,12 @@ ul {
 
 #completed-btn {
   display: none;
+  padding: 0.5rem;
+  background-color: green;
+  border-radius: 5px;
+  color: #fff;
+}
+
+.not-completed {
+  background-color: red;
 }
