--- a/todowithanimations/style.css
+++ b/todowithanimations/style.css
@@ -4,8 +4,14 @@
   padding: 0;
 }
 
+html {
+  min-height: 100vh;
+}
+
 body {
-  background-color: blueviolet;
+  background: linear-gradient(#f8cfcd, #f18f8b);
+  background-repeat: no-repeat;
+  font-family: sans-serif;
 }
 
 .container {
@@ -16,8 +22,7 @@ body {
   padding: 2rem 0;
   margin: 2rem auto;
   background-color: #fff;
-  /* animation: name duration timing-function delay iteration-count direction fill-mode; */
-  /* animation: dropdown 3s forwards; */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   animation: dropdown 0.9s ease-out;
   animation-fill-mode: backwards;
   animation-delay: 0.1s;
@@ -26,16 +31,38 @@ body {
 @keyframes dropdown {
   0% {
     opacity: 0;
-    transform: translateY(0%);
-  }
 
-  25% {
-    opacity: 1;
-    transform: translateY(4rem);
+    transform: translateY(-200px);
   }
 
   100% {
-    transform: translateY(0%);
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.heading,
+.container span.number_completed,
+.container form {
+  animation: any-fade-in 0.4s backwards;
+}
+.container span.number_completed {
+  animation-delay: 0.6s;
+}
+.container form {
+  animation-delay: 0.7s;
+}
+
+.heading {
+  animation-delay: 0.5s;
+}
+
+@keyframes any-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
@@ -57,39 +84,32 @@ input[type="text"] {
   font-size: 1rem;
 }
 
-
 .error {
+  display: none;
   color: red;
   text-align: center;
-  animation: blink 1.2s linear;
+  
 }
 
+.error.active {
+  display: block;
+  animation: blink 0.3s;
+  animation-iteration-count: 3;
+}
 
 @keyframes blink {
-    0% {
-      opacity: 0
-    }
-  
-    20% {
-      opacity: 1
-    }
-  
-    40% {
-      opacity: 0
-    }
-  
-    60% {
-      opacity: 1
-    }
-  
-    80% {
-      opacity: 0
-    }
-  
-    100% {
-      opacity: 1
-    }
+  0% {
+    opacity: 0;
   }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
 
 ul.list-items {
   list-style-type: none;
@@ -107,13 +127,13 @@ ul.list-items li {
   animation: swing 1s forwards;
 }
 
-@keyframes swing{
-    0%{
-        transform: translateY(20px);
-    }
-    100%{
-        transform: translateY(-5px);
-    }
+@keyframes swing {
+  0% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(-5px);
+  }
 }
 
 ul.list-items li span {
@@ -132,11 +152,8 @@ ul.list-items li span {
 
 .completed {
   text-decoration: line-through;
-  border: 1px solid green;
+  opacity: 0.5;
   animation: fadeIn 0.5s ease-in;
   animation-fill-mode: forwards;
 }
-/* .fa-trash {
-  color: red;
-  margin-left: 1rem;
-} */
+
