--- a/HackerEscapeRoom/style.css
+++ b/HackerEscapeRoom/style.css
@@ -12,6 +12,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 body {
@@ -20,8 +21,13 @@ body {
 
 .main-container {
   min-height: 100vh;
-  max-width: 50%;
+  max-width: 60%;
   margin: 0 auto;
+}
+
+.sub-container {
+  min-height: 55vh;
+  position: relative;
 }
 
 nav.navbar {
@@ -61,4 +67,70 @@ div img.hero-img {
   position: absolute;
   left: 0;
   right: 0;
+}
+
+div.action-btn {
+  position: absolute;
+  bottom: -15px;
+  transform: translateX(25%);
+}
+
+div.action-btn button,
+div.challenges-btn button,
+.btn {
+  padding: 0.2rem 1rem;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+div.action-btn button:first-child,
+div.challenges-btn button:first-child {
+  background: var(--buttonColor);
+}
+div.action-btn button:nth-child(2n),
+div.challenges-btn button:nth-child(2n) {
+  background: var(--secondaryColor);
+}
+.btn {
+  background-color: var(--buttonColor);
+  color: #fff;
+}
+
+.card {
+  position: relative;
+}
+
+.stars {
+  color: var(--buttonColor);
+}
+a.book-room {
+  position: absolute;
+  bottom: 2px;
+  right: 5px;
+  background-color: var(--buttonColor);
+  color: #fff;
+}
+
+div.details,
+.footer {
+  background-color: var(--darkColor);
+  padding: 2rem 0;
+}
+
+div.details p {
+  line-height: 33px;
+  font-weight: 400;
+}
+
+div.details button {
+  color: var(--secondaryColor);
+  background-color: var(--darkColor);
+  padding: 0.5rem 1.5rem;
+  border-radius: 4px;
+  border: 2px solid var(--secondaryColor);
+}
+
+.footer-link a, .footer-social a{
+  color: #fff;
+  text-decoration: none;
 }
