--- a/HackerEscapeRoom/style.css
+++ b/HackerEscapeRoom/style.css
@@ -18,22 +18,14 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.main-container {
-  /* max-width: 70%;
-   max-width: 1280px;  
-  margin: 0 auto; */
-}
-
-/* .sub-container {
-  min-height: 55vh;
-  position: relative;
-} */
-
 nav.navbar {
   color: #fff;
+  position: relative;
 }
-a.navbar-brand img {
-  width: 10%;
+
+a.navbar-brand h1 {
+  font-size: 40px;
+  font-weight: 700;
 }
 
 .nav-container {
@@ -54,6 +46,7 @@ ul.navbar-nav {
 
 ul.navbar-nav li a {
   color: #fff;
+  font-size: 24px;
 }
 
 ul.navbar-nav li a.active {
@@ -68,9 +61,6 @@ ul.navbar-nav li a.active {
   background-position: center;
   background-repeat: no-repeat;
   min-height: 468px;
-  left: 0;
-  right: 0;
-  margin: 0;
 }
 
 img.hero-img {
@@ -212,6 +202,12 @@ p.play-description {
   padding: 4rem;
 }
 
+.container.footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .footer-div h5,
 .footer-div p,
 .footer-social span {
@@ -241,7 +237,22 @@ p.play-description {
   }
 
   a.navbar-brand img {
-    width: 100%;
+    width: 128px;
+    height: 82px;
+    margin-right: 0.5rem;
+  }
+
+  a.navbar-brand h1 {
+    display: flex;
+    flex-direction: column;
+    font-size: 24px;
+  }
+
+  span.navbar-toggler-icon {
+    background-color: #fff;
+    position: absolute;
+    top: 5px;
+    right: 5px;
   }
 
   .hero-div {
@@ -286,19 +297,21 @@ p.play-description {
   }
 
   .challenges h1 {
-    min-width: 100vw;
-    font-size: 24px;
+    font-size: 28px;
+    margin-left: -1.1rem;
+    margin-right: -1.1rem;
   }
 
+ 
   .card.room-info {
     margin-bottom: 2rem;
   }
 
   .details {
-    max-width: 100%;
     max-height: 500px;
-    padding: 2rem;
-    margin-top: -2rem;
+    text-align: center;
+    margin: -2rem 0 0 0;
+    padding: 2rem 0;
   }
 
   .playing {
@@ -315,6 +328,12 @@ p.play-description {
   .playing-details {
     max-width: 480px;
     margin-bottom: 4rem;
+    text-align: start;
+    padding: 4rem 0;
+  }
+
+  .play-detail {
+    margin-bottom: -1rem;
   }
   .play-detail {
     order: 2;
@@ -324,11 +343,14 @@ p.play-description {
     order: 1;
   }
 
-  div.footer {
-    display: flex !important;
+  .container.footer {
+    display: block;
+    padding-top: 2rem;
+    margin: 0;
+    height: 566px;
+  }
 
-    min-height: 480px;
-    height: auto;
-    margin-top: -10rem;
+  div.footer-social {
+    margin-top: 0.5rem;
   }
 }
