--- a/HackerEscapeRoom/style.css
+++ b/HackerEscapeRoom/style.css
@@ -37,6 +37,34 @@ a.navbar-brand h1 {
   width: 100%;
 }
 
+/* hamburge icon */
+
+#hamburger-icon {
+  display: none;
+  margin: auto 0;
+}
+#hamburger-icon div {
+  width: 50px;
+  height: 6px;
+  border-radius: 10px;
+  background-color: #fff;
+  margin: 7px 0;
+  transition: 0.4s;
+}
+
+.open .bar1 {
+  transform: rotate(-45deg) translate(-6px, 6px);
+}
+
+.open .bar2 {
+  opacity: 0;
+}
+.open .bar3 {
+  transform: rotate(45deg) translate(-12px, -9px);
+}
+
+/* hamburger icon ends */
+
 ul.navbar-nav {
   display: flex;
   justify-content: space-around;
@@ -240,6 +268,17 @@ p.play-description {
     max-width: 576px;
   }
 
+  #hamburger-icon {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 10px;
+  }
+
+  .navbarNav {
+    display: none;
+  }
+
   a.navbar-brand img {
     width: 128px;
     height: 82px;
@@ -252,11 +291,8 @@ p.play-description {
     font-size: 24px;
   }
 
-  span.navbar-toggler-icon {
-    background-color: #fff;
-    position: absolute;
-    top: 15px;
-    right: 10px;
+  ul.navbar-nav li a.active {
+    color: #fff !important;
   }
 
   .hero-div {
