--- a/ssr-movieSite/templates/layouts/main.handlebars
+++ b/ssr-movieSite/templates/layouts/main.handlebars
@@ -1,14 +1,144 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="/static/main.css">
   </head>
   <body>
     <header class="header">
-      <h1>The Movie Site</h1>
+        <a href="index.html">
+            <img class="header-logo" src="./static/biospegeln_100_white.png" alt="Spegeln logo">
+        </a>
+
+        <ul class="socials-list">
+            <li>
+                <a href="/"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="/"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="/"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="/"><i class="fa-solid fa-envelope"></i></a>
+            </li>
+        </ul>
     </header>
+    <nav class="main-nav">
+        <button class="toggle-menu"><i class="fa-solid fa-bars"></i></button>
+
+        <menu class="nav-menu">
+            <li>
+                <a href="/contact.html">Öppettider & Kontakt</a>
+            </li>
+            <li>
+                <a href="/about.html">Om Spegeln</a>
+            </li>
+            <li>
+                <a href="/tickets.html">Biljettinfo</a>
+            </li>
+            <li>
+                <a href="/news.html">Vill du ha vårt nyhetsbrev?</a>
+            </li>
+            <li>
+                <a href="/giftcard.html">Köp presentkort</a>
+            </li>
+        </menu>
+    </nav>
+
+    <nav class="sidebar-nav">
+        <ul class="nav-list">
+            <li>
+                <button class="dropdown-toggle">REPERTUAR</button>
+                
+                <menu class="dropdown-menu">
+                    <li>
+                        <a href="/">Hela bioprogrammet</a>
+                    </li>
+                    <li>
+                        <a href="/">Kommande premiärer</a>
+                    </li>
+                    <li>
+                        <a href="/">Matinèfilm för 100kr</a>
+                    </li>
+                </menu>
+            </li>
+            <li>
+                <button class="dropdown-toggle">SALONGER</button>
+                
+                <menu class="dropdown-menu">
+                    <li>
+                        <a href="/">Salong Alcazar</a>
+                    </li>
+                </menu>
+            </li>
+            <li>
+                <button class="dropdown-toggle">SPECIALVISNINGAR</button>
+                
+                <menu class="dropdown-menu">
+                    <li>
+                        <a href="/">Klassiker</a>
+                    </li>
+                    <li>
+                        <a href="/">Fukostbio</a>
+                    </li>
+                    <li>
+                        <a href="/">Cinemateket</a>
+                    </li>
+                    <li>
+                        <a href="/">Galapremiärer</a>
+                    </li>
+                    <li>
+                        <a href="/">Dokumentärer</a>
+                    </li>
+                </menu>
+            </li>
+            <li>
+                <button class="dropdown-toggle">LIVE PÅ BIO</button>
+                
+                <menu class="dropdown-menu">
+                    <li>
+                        <a href="/">Hela programmet</a>
+                    </li>
+                    <li>
+                        <a href="/">Opera</a>
+                    </li>
+                    <li>
+                        <a href="/">Teater</a>
+                    </li>
+                    <li>
+                        <a href="/">Konst</a>
+                    </li>
+                    <li>
+                        <a href="/">Konsert</a>
+                    </li>
+                </menu>
+            </li>
+            <li>
+                <button class="dropdown-toggle">BAR & BISTRO</button>
+                
+                <menu class="dropdown-menu">
+                    <li>
+                        <a href="/">Meny</a>
+                    </li>
+                    <li>
+                        <a href="/">Premiärfredag</a>
+                    </li>
+                    <li>
+                        <a href="/">Filmquiz</a>
+                    </li>
+                </menu>
+            </li>
+        </ul>
+    </nav>
+
     <main class="content">
       {{{body}}}
     </main>
+
+    <footer>
+      Best site ever
+    </footer>
   </body>
 </html>
