--- a/ssr-movieSite/templates/movie.handlebars
+++ b/ssr-movieSite/templates/movie.handlebars
@@ -1,7 +1,11 @@
-<a href = "/">Back to home page</a>
+<a href="/">Back to home page</a>
 <div class="movie">
+  <div class="img-container">
+    <img src="{{singleMovie.attributes.image.url}}" alt="" />
+  </div>
+  <div class="desc">
     <h1>{{singleMovie.attributes.title}}</h1>
-    <img src="{{singleMovie.attributes.image.url}}" alt="">
     <p>{{singleMovie.attributes.intro}}</p>
+  </div>
 
 </div>
