--- a/ssr-movieSite/templates/movie.handlebars
+++ b/ssr-movieSite/templates/movie.handlebars
@@ -1,11 +1,13 @@
-<a href="/">Back to home page</a>
-<div class="movie">
-  <div class="img-container">
-    <img src="{{singleMovie.attributes.image.url}}" alt="" />
-  </div>
-  <div class="desc">
-    <h1>{{singleMovie.attributes.title}}</h1>
-    <p>{{singleMovie.attributes.intro}}</p>
-  </div>
+<section id="content-text" class="content-text">
+  <a href="/">Back to home page</a>
+  <div class="movie">
+    <div class="img-container">
+      <img src="{{singleMovie.attributes.image.url}}" alt="" />
+    </div>
+    <div class="desc">
+      <h1>{{singleMovie.attributes.title}}</h1>
+      <p>{{singleMovie.attributes.intro}}</p>
+    </div>
 
-</div>
+  </div>
+</section>
