--- a/ssr-movieSite/templates/giftcard.handlebars
+++ b/ssr-movieSite/templates/giftcard.handlebars
@@ -1,1 +1,21 @@
-<h1>PRESENTKORT</h1>
+<div class="present-card" >
+  <div class="ticket-info">
+    <h1>Ge bort ett presentkort på Sundsvaal Spegeln</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+      quasi consequuntur necessitatibus aut odit iusto reprehenderit omnis,
+      autem vel quo alias debitis fugiat nulla incidunt, tempore maiores dolorum
+      delectus culpa!</p>
+
+  </div>
+  <div class="purchase-info">
+    <h1>Köp presentkort på plats</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, error.</p>
+
+  </div>
+  <div class="company-purchase-info">
+    <h1>Köp presentkort på företag</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, error.</p>
+
+  </div>
+
+</div>
