--- a/ssr-movieSite/templates/layouts/main.handlebars
+++ b/ssr-movieSite/templates/layouts/main.handlebars
@@ -11,7 +11,7 @@
       <a href="/">
         <img
           class="header-logo"
-          src="./static/biospegeln_100_white.png"
+          src="./static/images/biospegeln_100_white.png"
           alt="Spegeln logo"
         />
       </a>
@@ -151,7 +151,52 @@
     </main>
 
     <footer>
-      Best site ever
+      <div class="footer-section">
+        <h3 class="footer-header">Tomtens Biograf</h3>
+        <p class="footer-text">
+          Storgatan 23
+          <br />
+          90733 Sundsvaal
+        </p>
+      </div>
+
+      <div class="footer-section">
+        <h3 class="footer-header">Kontakta oss</h3>
+        <p class="footer-text">
+          E-post:
+          <a href="" class="footer-link">info@tomtensbiograf.se</a>
+        </p>
+        <p class="footer-text">Telefon: 999 - 000 22 33</p>
+        <p class="footer-text">
+          Följ oss på
+          <a href="" class="footer-link">Facebook</a>
+          och
+          <a href="" class="footer-link">Instagram</a>
+        </p>
+      </div>
+
+      <div class="footer-section3">
+        <h3 class="footer-header">I samarbete med:</h3>
+        <div class="footer-images">
+
+          <img
+            src="../../static/images/sfi-removebg-preview.png"
+            alt="SFI"
+            class="footer-image"
+          />
+          <img
+            src="../../static/images/ABF-removebg-preview.png"
+            alt="ABF"
+            class="footer-image"
+          />
+          <img
+            src="../../static/images/ladda_ned-removebg-preview.png"
+            alt="Europa cinema"
+            class="footer-image"
+          />
+        </div>
+
+      </div>
     </footer>
   </body>
 </html>
