--- a/ssr-movieSite/src/main.scss
+++ b/ssr-movieSite/src/main.scss
@@ -28,4 +28,6 @@ body, html{
 @import 'sections/moviePage.scss';
 @import 'sections/movies.scss';
 @import 'sections/content.scss';
+@import 'sections/footer.scss';
+@import 'sections/giftCard.scss';
 
