--- a/ssr-movieSite/templates/movie.handlebars
+++ b/ssr-movieSite/templates/movie.handlebars
@@ -2,7 +2,7 @@
   <a href="/">Back to home page</a>
   <div class="movie">
     <div class="img-container">
-      <img src="{{singleMovie.attributes.image.url}}" alt="" />
+      <img src="{{singleMovie.attributes.image.url}}" alt="movie-poster" />
     </div>
     <div class="desc">
       <h1>{{singleMovie.attributes.title}}</h1>
