not found page added

--- a/ssr-movieSite/templates/layouts/main.handlebars
+++ b/ssr-movieSite/templates/layouts/main.handlebars
@@ -7,196 +7,12 @@
     <link rel="stylesheet" type="text/css" href="/static/main.css" />
   </head>
   <body>
-    <header class="header">
-      <a href="/">
-        <img
-          class="header-logo"
-          src="./static/images/biospegeln_100_white.png"
-          alt="Spegeln logo"
-        />
-      </a>
-
-      <ul class="socials-list">
-        <li>
-          <a href="/"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li>
-          <a href="/"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li>
-          <a href="/"><i class="fa-brands fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="/"><i class="fa-solid fa-envelope"></i></a>
-        </li>
-      </ul>
-    </header>
-    <nav class="main-nav">
-      <button class="toggle-menu"><i class="fa-solid fa-bars"></i></button>
-
-      <menu class="nav-menu">
-        {{#each MENU}}
-          <a href="{{this.link}}">
-            <li>{{this.label}}</li>
-          </a>
-        {{/each}}
-        <li>
-          <a href="/openinghours">Öppettider & Kontakt</a>
-        </li>
-        <li>
-          <a href="/about">Om Spegeln</a>
-        </li>
-        <li>
-          <a href="/ticket-info">Biljettinfo</a>
-        </li>
-        <li>
-          <a href="/newsletter">Vill du ha vårt nyhetsbrev?</a>
-        </li>
-        <li>
-          <a href="/giftcard">Köp presentkort</a>
-        </li>
-
-      </menu>
-    </nav>
-
-    <nav class="sidebar-nav">
-      <ul class="nav-list">
-
-        <li>
-          <button class="dropdown-toggle">REPERTUAR</button>
-
-          <menu class="dropdown-menu">
-            <li>
-              <a href="/">Hela bioprogrammet</a>
-            </li>
-            <li>
-              <a href="/">Kommande premiärer</a>
-            </li>
-            <li>
-              <a href="/">Matinèfilm för 100kr</a>
-            </li>
-          </menu>
-        </li>
-        <li>
-          <button class="dropdown-toggle">SALONGER</button>
-
-          <menu class="dropdown-menu">
-            <li>
-              <a href="/">Salong Alcazar</a>
-            </li>
-          </menu>
-        </li>
-        <li>
-          <button class="dropdown-toggle">SPECIALVISNINGAR</button>
-
-          <menu class="dropdown-menu">
-            <li>
-              <a href="/">Klassiker</a>
-            </li>
-            <li>
-              <a href="/">Fukostbio</a>
-            </li>
-            <li>
-              <a href="/">Cinemateket</a>
-            </li>
-            <li>
-              <a href="/">Galapremiärer</a>
-            </li>
-            <li>
-              <a href="/">Dokumentärer</a>
-            </li>
-          </menu>
-        </li>
-        <li>
-          <button class="dropdown-toggle">LIVE PÅ BIO</button>
-
-          <menu class="dropdown-menu">
-            <li>
-              <a href="/">Hela programmet</a>
-            </li>
-            <li>
-              <a href="/">Opera</a>
-            </li>
-            <li>
-              <a href="/">Teater</a>
-            </li>
-            <li>
-              <a href="/">Konst</a>
-            </li>
-            <li>
-              <a href="/">Konsert</a>
-            </li>
-          </menu>
-        </li>
-        <li>
-          <button class="dropdown-toggle">BAR & BISTRO</button>
-
-          <menu class="dropdown-menu">
-            <li>
-              <a href="/">Meny</a>
-            </li>
-            <li>
-              <a href="/">Premiärfredag</a>
-            </li>
-            <li>
-              <a href="/">Filmquiz</a>
-            </li>
-          </menu>
-        </li>
-      </ul>
-    </nav>
+   {{>header}}
 
     <main class="content">
       {{{body}}}
     </main>
 
-    <footer>
-      <div class="footer-section">
-        <h3 class="footer-header">Tomtens Biograf</h3>
-        <p class="footer-text">
-          Storgatan 23
-          <br />
-          90733 Sundsvaal
-        </p>
-      </div>
-
-      <div class="footer-section">
-        <h3 class="footer-header">Kontakta oss</h3>
-        <p class="footer-text">
-          E-post:
-          <a href="" class="footer-link">info@tomtensbiograf.se</a>
-        </p>
-        <p class="footer-text">Telefon: 999 - 000 22 33</p>
-        <p class="footer-text">
-          Följ oss på
-          <a href="" class="footer-link">Facebook</a>
-          och
-          <a href="" class="footer-link">Instagram</a>
-        </p>
-      </div>
-
-      <div class="footer-section3">
-        <h3 class="footer-header">I samarbete med:</h3>
-        <div class="footer-images">
-
-          <img
-            src="../../static/images/sfi-removebg-preview.png"
-            alt="SFI"
-            class="footer-image"
-          />
-          <img
-            src="../../static/images/ABF-removebg-preview.png"
-            alt="ABF"
-            class="footer-image"
-          />
-          <img
-            src="../../static/images/ladda_ned-removebg-preview.png"
-            alt="Europa cinema"
-            class="footer-image"
-          />
-        </div>
-
-      </div>
-    </footer>
+    {{>footer}}
   </body>
 </html>
