--- a/ssr-movieSite/templates/layouts/main.handlebars
+++ b/ssr-movieSite/templates/layouts/main.handlebars
@@ -5,6 +5,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
     <link rel="stylesheet" type="text/css" href="/static/main.css" />
+     <script src="../../static/js/main.js" type="module"></script>
   </head>
   <body>
    {{>header}}
@@ -14,5 +15,6 @@
     </main>
 
     {{>footer}}
+   
   </body>
 </html>
