--- a/wordie/style.css
+++ b/wordie/style.css
@@ -29,6 +29,11 @@ input {
  
 }
 
+span.msg{
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+}
+
 .buttons button {
   padding: 1rem 2rem;
   border-radius: 10px;
