served the react app on the server

--- a/fullstark-woordle/backend/templates/highscores.handlebars
+++ b/fullstark-woordle/backend/templates/highscores.handlebars
@@ -4,7 +4,9 @@
   <ul class="highscores">
     {{#each mappedScores}}
       <li>
-        {{this.duration}}
+        {{this.playerName}}-
+        {{this.duration}}s
+        
       </li>
 
     {{/each}}
